[gd_scene load_steps=17 format=3 uid="uid://yy28xqi8d8lh"]

[ext_resource type="FontFile" uid="uid://ghvifafc88cx" path="res://Assets/Fonts/PixelOperator8.ttf" id="1_3p6ni"]
[ext_resource type="Script" path="res://Scripts/UI/u_itscn.gd" id="1_mbf3i"]
[ext_resource type="Texture2D" uid="uid://bfxud61qsmt5m" path="res://Assets/UI/Buttons/Restart/restart_normal.png" id="3_7n3pw"]
[ext_resource type="Texture2D" uid="uid://c3g7vxrxwrp88" path="res://Assets/UI/Buttons/Restart/restart_pressed.png" id="4_5yuq5"]
[ext_resource type="Texture2D" uid="uid://cae8udu5evvli" path="res://Assets/UI/Screens/Win_Screen1.png" id="4_w4ac7"]
[ext_resource type="Texture2D" uid="uid://bg2m3qkoh8ay1" path="res://Assets/UI/Buttons/Restart/restart_hover.png" id="5_n3rxm"]
[ext_resource type="Texture2D" uid="uid://knahl7vqsm7m" path="res://Assets/UI/Screens/Win_Screen2.png" id="5_o56yw"]
[ext_resource type="Texture2D" uid="uid://d14pdsujr23js" path="res://Assets/UI/Screens/Win_Screen3.png" id="6_23wed"]
[ext_resource type="Texture2D" uid="uid://blex0xkblr1uu" path="res://Assets/UI/Screens/Loose_Screen1.png" id="7_5u75v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkas5"]
bg_color = Color(1, 0.0941176, 0.298039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmh8o"]
bg_color = Color(0.113725, 0.72549, 0.262745, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeiye"]
atlas = ExtResource("4_w4ac7")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysgw6"]
atlas = ExtResource("5_o56yw")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2t3v"]
atlas = ExtResource("6_23wed")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_fbxqc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeiye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysgw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2t3v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yl8wu"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mbf3i")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HUD_Container" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="LifesContainer" type="HBoxContainer" parent="MarginContainer/HUD_Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="Label" type="Label" parent="MarginContainer/HUD_Container/LifesContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3p6ni")
theme_override_font_sizes/font_size = 8
text = "lives"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HUD_Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/HUD_Container/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3p6ni")
theme_override_font_sizes/font_size = 8
text = "SCORE : 0000
"
vertical_alignment = 1

[node name="TimerContainer" type="HBoxContainer" parent="MarginContainer/HUD_Container"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TimerTitle" type="Label" parent="MarginContainer/HUD_Container/TimerContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_3p6ni")
theme_override_font_sizes/font_size = 8
text = "TIME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerProgress" type="ProgressBar" parent="MarginContainer/HUD_Container/TimerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(176, 16)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_rkas5")
theme_override_styles/fill = SubResource("StyleBoxFlat_nmh8o")
max_value = 180.0
value = 180.0
fill_mode = 1
show_percentage = false

[node name="WinLoseScreen" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/WinLoseScreen"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2

[node name="WinScreen" type="AnimatedSprite2D" parent="MarginContainer/WinLoseScreen/PanelContainer"]
position = Vector2(176, 173)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_fbxqc")
autoplay = "default"
frame_progress = 0.573611

[node name="LoseScreen" type="Sprite2D" parent="MarginContainer/WinLoseScreen/PanelContainer"]
visible = false
position = Vector2(176, 173)
scale = Vector2(2, 2)
texture = ExtResource("7_5u75v")

[node name="RestartButton" type="TextureButton" parent="MarginContainer/WinLoseScreen/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("3_7n3pw")
texture_pressed = ExtResource("4_5yuq5")
texture_hover = ExtResource("5_n3rxm")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/WinLoseScreen"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/WinLoseScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 128
theme_override_styles/separator = SubResource("StyleBoxEmpty_yl8wu")

[node name="TimeScoreLable" type="Label" parent="MarginContainer/WinLoseScreen/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3p6ni")
theme_override_font_sizes/font_size = 8
text = "Time : 0000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeoutTimer" type="Timer" parent="."]

[node name="Instrutions" type="Node" parent="."]

[node name="InstrutionLabel" type="Label" parent="Instrutions"]
offset_left = 32.0
offset_top = 144.0
offset_right = 320.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("1_3p6ni")
theme_override_font_sizes/font_size = 16
text = "ajude as capivaras a chegar em casa 

Use as Setas ou WASD"
horizontal_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="InstructionTimer" type="Timer" parent="Instrutions"]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="MarginContainer/WinLoseScreen/PanelContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="Instrutions/InstructionTimer" to="." method="_on_instruction_timer_timeout"]
